--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
+    "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "mongodb": "^6.5.0",
     "mysql2": "^3.9.3",
