--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "mongodb": "^6.5.0",
     "mysql2": "^3.9.3",
     "pg": "^8.11.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "url": "^0.11.3"
   },
   "devDependencies": {
